# md-book

./: .env.1password  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  @lessons-learned.md  @memory.md  @scratchpad.md  CHANGELOG.md  CLAUDE.md  CLOUDFLARE_SETUP.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  HANDOVER.md  Makefile  README.md  VALIDATION_REPORT.md  amplify.yml  book.toml  book.webawesome.toml  deny.toml  fly.toml  index.md.backup  lessons-learned.md  netlify.toml  package-lock.json  package.json  railway.toml  render.yaml  rust-toolchain.toml  session_history.txt  vercel.json  wrangler.toml
.do/: app.yaml
.docs/: summary-src-config-rs.md  summary-src-core-rs.md  summary-src-lib-rs.md  summary-src-main-rs.md  summary-src-pagefind_service-rs.md  summary-src-server-rs.md  summary.md
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-worker.yml  deploy.yml  netlify-deploy.yml  release.yml  sync-secrets.yml
benches/: pagefind_bench.rs
demo-docs/: configuration.md  features.md  getting-started.md  index.md
demo-output/js/: live-reload.js
demo-output/pagefind/: pagefind-entry.json  pagefind.unknown_3dc0d425e631980.pf_meta  pagefind.unknown_d79c8b4253401d2.pf_meta
demo-output/pagefind/fragment/: unknown_1cd919f.pf_fragment  unknown_5e5730d.pf_fragment  unknown_8a1c2ae.pf_fragment  unknown_ca52e8c.pf_fragment  unknown_e71c425.pf_fragment
demo-output/pagefind/index/: unknown_b97fbbc.pf_index
dist1/: Architecture.html  CODE_OF_CONDUCT.html  CONTRIBUTE.html  DesignDecisions.html  Introduction.html  README.html  SUMMARY.html  Use-cases.html
dist1/css/: styles.css
dist1/kg/: haystack.html  service.html  terraphim-graph.html
dist1/scorers/: Title-Scorer.html  terraphim-graph.html
dist2/: getting-started.html  index.html
dist2/components/: search-modal.js
dist2/js/: pagefind-search.js
dist2/pagefind/: pagefind-entry.json  pagefind.unknown_411b1da4e9a9bb4.pf_meta
dist2/pagefind/fragment/: unknown_1769b1c.pf_fragment  unknown_572c37b.pf_fragment  unknown_b8dc67c.pf_fragment  unknown_e9b342c.pf_fragment
dist2/pagefind/index/: unknown_8ac62c4.pf_index
dist_test/: index.html
dist_test/pagefind/: pagefind-entry.json  pagefind.unknown_e7ce3ac5e7dfe6b.pf_meta
dist_test/pagefind/fragment/: unknown_1c2540c.pf_fragment  unknown_23b75c5.pf_fragment  unknown_24d96e9.pf_fragment  (+29 more)
dist_test/src/: README.html  SUMMARY.html  last.html  prefix.html  suffix.html
dist_test_2/: index.html
dist_test_2/js/: code-copy.js
dist_test_2/pagefind/: pagefind-entry.json  pagefind.unknown_b315c205d678a2f.pf_meta
dist_test_2/src/: README.html  SUMMARY.html  last.html  prefix.html  suffix.html
docs/: 1PASSWORD_SETUP.md  README.md  crates.js  help.html  index.html  settings.html  src-files.js
docs/md_book/: all.html  index.html  sidebar-items.js
docs/search.index/: 02043eb414a5.js  030b348ff511.js  054246d983b5.js  05c229f3e878.js  05c2a564156c.js  05f541c5d51e.js  0696c1810c48.js  070dc76b0263.js  07cc03cfd8cd.js  08b88b385bbf.js  0915b888c70e.js  0a2d35d54fff.js  0ae18c841cc9.js  0dfd845111e9.js  0e5e480f921d.js  0f2dedd45385.js  0f8ccaaa7a7a.js  113732ed2a17.js  11c01dbacc7c.js  1250888f08da.js  12884e1a6582.js  13946b4f2e0f.js  146c7c0231df.js  15b298f2bf1e.js  16a8a37f07af.js  17426ab8130c.js  1844952947fa.js  1b3939d181ac.js  1b756c8ac718.js  1dae4ee9385b.js  1e166b55563e.js  1ebeba891757.js  1f3bcad0f5f8.js  1fec011cb55c.js  2176c7eff33f.js  22651cb87532.js  226739350e47.js  23825f47bd57.js  23fa4e8dad8d.js  24cfaed2caf4.js  (+89 more)
promo-content/: devto-article.md  hackernews-post.md  reddit-post.md  twitter-posts.md
pub/: Architecture.html  CODE_OF_CONDUCT.html  CONTRIBUTE.html  DesignDecisions.html  Introduction.html  README.html  SUMMARY.html  Use-cases.html  index.html
pub/components/: doc-toc.js
pub/kg/: haystack.html  service.html  terraphim-graph.html
pub/scorers/: Title-Scorer.html  terraphim-graph.html
scripts/: README.md  bench.sh  benchmark.sh  deploy-with-1password.sh  deploy-worker.sh  deploy.sh  monitor.sh  record-demos.mjs  rotate-cloudflare-token.sh  run-tests.sh  setup-1password.sh  setup-cloudflare.sh  setup-pre-commit.sh  sync-secrets-to-github.sh  test-search.sh  test-setup.sh  validate-secrets.sh
src/: config.rs  core.rs  lib.rs  main.rs  pagefind_service.rs  server.rs  watcher.rs
src/templates/: footer.html.tera  header.html.tera  index.html.tera  page.html.tera  sidebar.html.tera  styles.css
test-build/: getting-started.html
test-build/components/: simple-block.js
test-build/pagefind/: pagefind-entry.json  pagefind.unknown_7ff05d3c5c68f1e.pf_meta
test-readme/: configuration.html
test-readme/js/: search-init.js
test-readme/pagefind/: pagefind-entry.json  pagefind.unknown_9fef10276438913.pf_meta
test-server/: features.html  index.html
tests/: README.md  e2e.rs  frontend.test.js
tests/common/: mod.rs
tests/e2e/: build_test.rs  cli_test.rs  mdbook_test_book_e2e.rs  mod.rs  server_test.rs
tests/frontend/: README.md  search_test.js  setup.js
tests/integration/: build_test.rs  mdbook_compatibility.rs  mdbook_test_book.rs  mod.rs  pagefind_test.rs
tests/wasm/: mod.rs  pagefind_wasm_test.rs
worker/: wrangler.toml
worker/src/: index.js
(+217 files in other folders)
