[package]
name = "md-book"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "md-book"
path = "src/main.rs"

[lib]
name = "md_book"
path = "src/lib.rs"

[dependencies]
markdown = { version = "1.0.0-alpha.21" }
tera = "1.19.1"
walkdir = "2.4.0"
clap = { version = "4.4.11", features = ["derive"] }
anyhow = "1.0.75"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jiff = "0.1.5"
syntect = "5.0.0"
html-escape = "0.2.13"
twelf = { version = "0.15.0", features = ["env", "toml", "json", "shellexpand"] }

# required for server and watcher
warp = "0.3.5"
notify = "6.0.1"
tokio = { version = "1.33.0", features = ["full"] }

futures = "0.3"
futures-util = "0.3"

# search engine
pagefind = "1.3.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
wasm-bindgen-test = "0.3"
tokio-test = "0.4"
futures = "0.3"

[features]
default = []
wasm = []

[[bench]]
name = "pagefind_bench"
harness = false