[package]
name = "md-book"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "md-book"
path = "src/main.rs"

[lib]
name = "md_book"
path = "src/lib.rs"

[dependencies]
markdown = { version = "1.0.0-alpha.21" }
tera = "1.19.1"
walkdir = "2.4.0"
clap = { version = "4.4.11", features = ["derive"] }
anyhow = "1.0.75"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jiff = "0.1.5"
syntect = { version = "5.0.0", optional = true }
html-escape = "0.2.13"
twelf = { version = "0.15.0", features = ["env", "toml", "json", "shellexpand"] }

# Optional dependencies for native builds only
warp = { version = "0.3.5", optional = true }
notify = { version = "6.0.1", optional = true }
tokio = { version = "1.33.0", default-features = false, optional = true }

futures = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }

# search engine (optional)
pagefind = { version = "1.3.0", optional = true }

# WASM support
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
wasm-bindgen-test = "0.3"
tokio-test = "0.4"

[features]
default = ["server", "watcher", "search", "syntax-highlighting"]
server = ["warp", "tokio/full", "futures", "futures-util"]
watcher = ["notify", "tokio/full"]
search = ["pagefind", "tokio/rt", "tokio/macros"]
syntax-highlighting = ["syntect"]
wasm = ["wasm-bindgen"]
# WASM-only features (no server/networking)
wasm-core = ["wasm-bindgen"]
# Minimal features for core functionality  
core = ["tokio"]

[[bench]]
name = "pagefind_bench"
harness = false