[package]
name = "md-book"
version = "0.1.1"
edition = "2021"
description = "A modern mdbook replacement written in Rust that generates beautiful HTML documentation from Markdown files"
license = "MIT"
repository = "https://github.com/terraphim/md-book"
keywords = ["markdown", "documentation", "static-site", "mdbook", "html", "generator"]
categories = ["development-tools", "web-programming", "text-processing"]

[[bin]]
name = "md-book"
path = "src/main.rs"

[lib]
name = "md_book"
path = "src/lib.rs"

[dependencies]
markdown = { version = "1.0.0-alpha.21" }
tera = "1.20.1"
walkdir = "2.4.0"
clap = { version = "4.5.54", features = ["derive"] }
anyhow = "1.0.100"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jiff = "0.2.17"
syntect = { version = "5.3.0", optional = true }
html-escape = "0.2.13"
twelf = { version = "0.15.0", features = ["env", "toml", "json", "shellexpand"] }

# Optional dependencies for native builds only
warp = { version = "0.4.2", optional = true }
notify = { version = "8.2.0", optional = true }
tokio = { version = "1.49.0", default-features = false, optional = true }

futures = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }

# search engine (optional)
pagefind = { version = "1.3.0", optional = true }

# WASM support
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3.24"
wasm-bindgen-test = "0.3"
tokio-test = "0.4"
walkdir = "2.4"

[features]
default = ["server", "watcher", "search", "syntax-highlighting"]
server = ["warp", "tokio/full", "futures", "futures-util"]
watcher = ["notify", "tokio/full"]
search = ["pagefind", "tokio/rt", "tokio/macros"]
syntax-highlighting = ["syntect"]
wasm = ["wasm-bindgen"]
# WASM-only features (no server/networking)
wasm-core = ["wasm-bindgen"]
# Minimal features for core functionality  
core = ["tokio"]

[[test]]
name = "integration"
path = "tests/integration/build_test.rs"

[[test]]
name = "mdbook_test_book"
path = "tests/integration/mdbook_test_book.rs"

[[test]]
name = "mdbook_compatibility"
path = "tests/integration/mdbook_compatibility.rs"

[[test]]
name = "e2e"
path = "tests/e2e/cli_test.rs"

[[test]]
name = "mdbook_e2e"
path = "tests/e2e/mdbook_test_book_e2e.rs"

[[bench]]
name = "pagefind_bench"
harness = false